--- a/Main.css
+++ b/Main.css
@@ -94,17 +94,26 @@
 
 .carousel .item 
 {
-  height: 600px;
+  height: 300px;
 }
 
 
-.carousel img 
+#sizeimcar1
 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 500px;
+	width: 100%;
+	height: 100%;
+}
+
+#sizeimcar2
+{
+	width: 100%;
+	height: 100%;
+}
+
+#sizeimcar3
+{
+	width: 100%;
+	height: 100%;
 }
 
 
