--- a/Main.css
+++ b/Main.css
@@ -2,6 +2,11 @@
 
 /*////////////////////////////////////// HEAD //////////////////////////////////////*/
 
+#body
+{
+	background-color: black;
+	overflow: hidden;
+}
 
 #conteneur
 {
@@ -75,13 +80,6 @@
 	color: white;
 }
 
-#bg
-{
-	position: fixed;
-	width: 100%;
-	height: 100%;
-}
-
 
 /*////////////////////////////////////// HTML //////////////////////////////////////*/
 
@@ -93,8 +91,8 @@
 }
 
 .carousel .item 
-{
-  height: 300px;
+{	
+  	height: 350px;
 }
 
 
@@ -127,7 +125,7 @@
 #exemple-diaporama
 {
 	border: 3px solid #000060;
-	margin-top: 22%;
+	margin-top: 19%;
 }
 
 .panel panel-default
@@ -137,9 +135,10 @@
 
 #lol
 {
-	margin-top: 7%;
-	border-bottom: 3px solid #FFE4B5;  
-	border-top: 3px solid #FFE4B5;
+	margin-top: 1.5%;
+	padding-bottom: 6%;
+	border-bottom: 3px solid #000060;  
+	border-top: 3px solid #000060;
 	color: #FFE4B5;
 	position: absolute;
 	width: 100%;
@@ -147,16 +146,20 @@
 	background-color: #1C1C1C;
 }
 
-#lol p
+#txtpres
 {
-	margin-left: 45%;
+	font-size: 25px;
+	margin-top: 2%;
+	margin-left: 43%;
+	color: #000060;
+	text-decoration: underline overline;
 }
 
 #lol2
 {
 	margin-top: 100%;
-	border-bottom: 3px solid #FFE4B5;  
-	border-top: 3px solid #FFE4B5;
+	padding-bottom: 3%;
+	border-bottom: 3px solid red;  
 	color: #FFE4B5;
 	position: absolute;
 	width: 100%;
@@ -169,11 +172,20 @@
 	margin-left: 47%;
 }
 
+#txtgal
+{
+	font-size: 25px;
+	margin-left: 45%;
+	color: red;
+	text-decoration: underline overline;
+}
+
 #lol3
 {
 	margin-top: 200%;
-	border-bottom: 3px solid #FFE4B5;  
-	border-top: 3px solid #FFE4B5;
+	padding-top: 2%;
+	padding-bottom: 7%;
+	border-bottom: 3px solid #B8860B;  
 	color: #FFE4B5;
 	position: absolute;
 	width: 100%;
@@ -186,11 +198,19 @@
 	margin-left: 47%;
 }
 
+#txtvid
+{
+	font-size: 25px;
+	color: #B8860B;
+	padding-top: 5px;
+	text-decoration: underline overline;
+}
+
 #lol4
 {
 	margin-top: 330%;
-	border-bottom: 3px solid #FFE4B5;  
-	border-top: 3px solid #FFE4B5;
+	padding-bottom: 9%;
+	border-bottom: 3px solid green;  
 	color: #FFE4B5;
 	position: absolute;
 	width: 100%;
@@ -204,16 +224,36 @@
 	padding-top: 10px;
 }
 
+#txtform
+{
+	font-size: 25px;
+	margin-top: 1.5%;
+	color: green;
+	text-decoration: underline overline;
+}
+
+.txtformu
+{
+	color: green;
+}
+
 #lol5
 {
 	margin-top: 400%;
-	border-bottom: 3px solid #FFE4B5;  
-	border-top: 3px solid #FFE4B5;
+	padding-bottom: 7%;
+	border-bottom: 3px solid purple;  
 	color: #FFE4B5;
 	position: absolute;
 	width: 100%;
 	height: 80px;
 	background-color: #1C1C1C;
+}
+
+#txtcont
+{
+	font-size: 25px;
+	color: purple;
+	text-decoration: underline overline;
 }
 
 #lol5 p
@@ -222,35 +262,11 @@
 	padding-top: 10px;
 }
 
-#bar1
-{
-	background-color: #000060;
-}
-
-#bar2
-{
-	background-color: #601000;
-}
-
-#bar3
-{
-	background-color: #D0A000;
-}
-
-#bar4
-{
-	background-color: green;
-}
-
-#bar5
-{
-	background-color: purple;
-}
-
 .thumbnail
 {
 	background-color: black !important;
 	width: 70%;
+	height: 1100%;
 }
 
 .thumbnail img
@@ -265,7 +281,7 @@
 	display: flex;
 	margin-left: 8%;
 	flex-direction: row;
-	margin-top: 5%;
+	margin-top: 3%;	
 }
 
 .cadre
@@ -355,6 +371,17 @@ video
 	color: black;
 }
 
+.coulvid
+{
+	border: 2px solid #B8860B;
+}
+
+#underlineR8
+{
+	text-decoration: underline;
+	color: #B8860B;
+}
+
 #ogo
 {
 	background-color: white;
@@ -368,7 +395,7 @@ video
 	border: 1px solid #000060;
 	position: absolute;
 	margin-left: 48%;
-	margin-top: 30%;
+	margin-top: -28%;
 }
 
 #link
@@ -387,6 +414,7 @@ video
 {
 	margin-top: -1%;
 	margin-right: -20%;
+	color: green;
 }
 
 .hey
@@ -423,14 +451,26 @@ video
 	background-color: rgba(0, 0, 0, .05);
 }
 
+.strg
+{
+	color: white;
+	text-decoration: underline;
+}
+
+#al
+{
+	border: 2px solid purple;
+	background-color: #1C1C1C;
+}
+
 #tab
 {
-	margin-top: 6%;
+	margin-top: 4%;
 	margin-right: 15%;
 	margin-left: 20%;
 	border: 1px solid purple;
-	background-color: blue;
 	text-align: center;
+	background-color: transparent;
 }
 
 #how
@@ -483,5 +523,10 @@ td
 {
 	text-align: center;
 	background-color: black;
+}
+
+#end
+{
+	color: black;
 }
 
