--- a/Main.css
+++ b/Main.css
@@ -159,7 +159,7 @@
 {
 	margin-top: 100%;
 	padding-bottom: 8%;
-	border-bottom: 3px solid red;  
+	border-bottom: 1px solid red;  
 	color: #FFE4B5;
 	position: absolute;
 	width: 100%;
@@ -174,9 +174,9 @@
 
 #txtgal
 {
-	font-size: 25px;
-	margin-left: 45%;
-	margin-top: 1%%;
+	font-size: 23px;
+	margin-left: 46%;
+	margin-top: 1.5%;
 	color: red;
 	text-decoration: underline overline;
 }
@@ -186,7 +186,7 @@
 	margin-top: 200%;
 	padding-top: 2%;
 	padding-bottom: 7%;
-	border-bottom: 3px solid #B8860B;  
+	border-bottom: 1px solid #B8860B;  
 	color: #FFE4B5;
 	position: absolute;
 	width: 100%;
@@ -201,7 +201,7 @@
 
 #txtvid
 {
-	font-size: 25px;
+	font-size: 23px;
 	color: #B8860B;
 	padding-top: 5px;
 	text-decoration: underline overline;
@@ -211,7 +211,7 @@
 {
 	margin-top: 330%;
 	padding-bottom: 9%;
-	border-bottom: 3px solid green;  
+	border-bottom: 1px solid green;  
 	color: #FFE4B5;
 	position: absolute;
 	width: 100%;
@@ -227,7 +227,7 @@
 
 #txtform
 {
-	font-size: 25px;
+	font-size: 23px;
 	margin-top: 1.5%;
 	color: green;
 	text-decoration: underline overline;
@@ -242,7 +242,8 @@
 {
 	margin-top: 400%;
 	padding-bottom: 7%;
-	border-bottom: 3px solid purple;  
+	border-top: 1px solid purple;
+	border-bottom: 1px solid purple;  
 	color: #FFE4B5;
 	position: absolute;
 	width: 100%;
@@ -252,8 +253,9 @@
 
 #txtcont
 {
-	font-size: 25px;
+	font-size: 23px;
 	color: purple;
+	margin-top: 0.2%;
 	text-decoration: underline overline;
 }
 
@@ -380,7 +382,7 @@ video
 
 .coulvid
 {
-	border: 2px solid #B8860B;
+	border: 1px solid #B8860B;
 }
 
 #underlineR8
@@ -464,9 +466,14 @@ video
 	text-decoration: underline;
 }
 
+.toright
+{
+	font-style: italic;
+}
+
 #al
 {
-	border: 2px solid purple;
+	border: 1px solid purple;
 	background-color: #1C1C1C;
 }
 
@@ -483,6 +490,7 @@ video
 #how
 {
 	text-align: center;
+	font-size: 100%;
 	border: 1px solid purple;
 	background-color: black;
 	color: white;
