--- a/Main.css
+++ b/Main.css
@@ -188,7 +188,7 @@
 	margin-top: 200%;
 	padding-top: 2%;
 	padding-bottom: 7%;
-	border-bottom: 1px solid #B8860B;  
+	border-bottom: 1px solid yellow;  
 	color: #FFE4B5;
 	position: absolute;
 	width: 100%;
@@ -204,7 +204,7 @@
 #txtvid
 {
 	font-size: 23px;
-	color: #B8860B;
+	color: yellow;
 	padding-top: 5px;
 	text-decoration: underline overline;
 }
@@ -338,7 +338,6 @@ h3
 
 video
 {
-	border: 2px solid #D0A000;
 	height: 400px;
 }
 
@@ -384,13 +383,13 @@ video
 
 .coulvid
 {
-	border: 1px solid #B8860B;
+	border: 1px solid yellow;
 }
 
 #underlineR8
 {
 	text-decoration: underline;
-	color: #B8860B;
+	color: yellow;
 }
 
 #ogo
