--- a/css/default.css
+++ b/css/default.css
@@ -848,6 +848,7 @@ properly.
    margin-top: 50%;
 }
 
+
 /*  Carousel -------------------------------------------------------- */
 
 .carousel{
@@ -860,7 +861,7 @@ properly.
     height: 100%;
 }
 .carousel .item img{
-    margin: 0 auto; /* Align slide image horizontally center */
+    margin-left: 38%;
 }
 .bs-example{
    margin: 20px;
@@ -869,9 +870,6 @@ properly.
     height: 150%;
 }
 
- .carousel-inner > .item > img,
- .carousel-inner > .item > a > img {
-     display: block;
-     max-width: 100%;
-     height: 600px !important;
- }
+.img-fluid{
+   width: 45%;
+}
