--- a/css/default.css
+++ b/css/default.css
@@ -9,7 +9,7 @@ TOC:
 a. Webfonts and Icon fonts
 b. Reset
 c. Default Styles
-   1. Basic
+   1. sic
    2. Typography
    3. Links
    4. Images
@@ -810,7 +810,7 @@ properly.
 
 #iutlogo{
    width: 80%;
-   margin-top: 38%;
+   margin-top: 85%;
    margin-bottom: 20%;
 }
 
@@ -827,7 +827,7 @@ properly.
 }
 
 #aubumar{
-   margin-top: 20%;
+   margin-top: 68%;
    margin-right: 19%;
    margin-bottom: 15%;
    width: 70%;
@@ -858,7 +858,7 @@ properly.
 .carousel .item{
     /*min-height: 280px;  Prevent carousel from being distorted if for some reason image doesn't load */
     margin: 10%;
-    height: 100%;
+    height: 100% !important;
 }
 .carousel .item img{
     margin-left: 38%;
@@ -867,9 +867,21 @@ properly.
    margin: 20px;
 }
 .carousel-inner{
-    height: 150%;
+    height: 150% !important;
 }
 
 .img-fluid{
    width: 45%;
+}
+
+.copyright li{
+   margin-left: 30%;
+}
+
+#sok1{
+   height: 400% !important;
+}
+
+#sok2{
+   height: 400% !important;
 }
