--- a/css/layout.css
+++ b/css/layout.css
@@ -197,9 +197,10 @@ ul#nav li.current a { color: #F06000; }
 
 #resume {
    background: #100501;
-   padding-top: 90px;
+   padding-top: 70px;
    padding-bottom: 72px;
    padding-left: 20%;
+   padding-right: 20%;
    overflow: hidden;
 }
 
@@ -252,7 +253,8 @@ ul#nav li.current a { color: #F06000; }
 .bars {
 	width: 95%;
 	float: left;
-	padding: 0;
+	padding-top: 12%;
+  padding-left: 10%;
 	text-align: left;
 }
 .bars .skills {
@@ -268,7 +270,7 @@ ul#nav li.current a { color: #F06000; }
 }
 .bars li em {
 	font: 15px 'opensans-bold', sans-serif;
-   color: #313131;
+   color: #6E7881;
 	text-transform: uppercase;
    letter-spacing: 2px;
 	font-weight: normal;
@@ -282,35 +284,35 @@ ul#nav li.current a { color: #F06000; }
 
    margin: 0;
    padding-right: 24px;
-  	background: #313131;
+  	background: #E96906;
    display: inline-block;
   	height: 42px;
    line-height: 42px;
    border-radius: 3px 0 0 3px;
 }
 
-.photoshop {
-  	width: 60%;
+.langages {
+  	width: 80%;
   	-moz-animation: photoshop 2s ease;
   	-webkit-animation: photoshop 2s ease;
 }
-.illustrator {
-  	width: 55%;
+.methodo {
+  	width: 70%;
   	-moz-animation: illustrator 2s ease;
   	-webkit-animation: illustrator 2s ease;
 }
-.wordpress {
+.systeme {
   	width: 50%;
   	-moz-animation: wordpress 2s ease;
   	-webkit-animation: wordpress 2s ease;
 }
-.css {
-  	width: 90%;
+.logiciel {
+  	width: 80%;
   	-moz-animation: css 2s ease;
   	-webkit-animation: css 2s ease;
 }
-.html5 {
-  	width: 80%;
+.bdd {
+  	width: 65%;
   	-moz-animation: html5 2s ease;
   	-webkit-animation: html5 2s ease;
 }
