--- a/css/layout.css
+++ b/css/layout.css
@@ -392,7 +392,7 @@ ul#nav li.current a { color: #F06000; }
    letter-spacing: 1px;
    text-align: center;
    margin-bottom: 48px;
-   color: #95A3A3;
+   color: black;
 }
 
 /* Portfolio Content */
@@ -484,6 +484,12 @@ ul#nav li.current a { color: #F06000; }
 }
 
 /* popup modal */
+#oui{
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
 .popup-modal {
 	max-width: 550px;
 	background: #fff;
@@ -545,7 +551,7 @@ ul#nav li.current a { color: #F06000; }
    opacity: 1;
 }
 /* content fadeout */
-.mfp-fade.mfp-wrap.mfp-removing .mfp-content .popup-modal {
+.mfp-fade.mfp-wrap.mfp-removing .mfp-content .popup- {
    opacity: 0;
 }
 
@@ -758,6 +764,9 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 /* h. Contact Section
 /* ------------------------------------------------------------------ */
+#ctact{
+  margin-left: 12%;
+}
 
 #contact {
    background: #191919;
@@ -765,7 +774,10 @@ call-to-action .button {
    padding-bottom: 102px;
    color: #636363;
 }
-#contact .section-head { margin-bottom: 42px; }
+#contact .section-head { 
+   margin-bottom: 42px; 
+   margin-left: 10%;
+ }
 
 #contact a, #contact a:visited  { color: #11ABB0; }
 #contact a:hover, #contact a:focus { color: #fff; }
@@ -903,6 +915,10 @@ footer {
    font-size: 14px;
    text-align: center;
    position: relative;
+}
+
+#foot{
+  margin-left: 12%;
 }
 
 footer a, footer a:visited { color: #525252; }
