--- a/css/layout.css
+++ b/css/layout.css
@@ -197,6 +197,7 @@ ul#nav li.current a { color: #F06000; }
 
 #resume {
    background: #100501;
+   margin-top: 20px;
    padding-top: 70px;
    padding-bottom: 72px;
    padding-left: 20%;
@@ -377,9 +378,18 @@ ul#nav li.current a { color: #F06000; }
 /* ------------------------------------------------------------------ */
 
 #portfolio {
-   background: #ebeeee;
+   background: #130101;
+   margin-top: 20px;
    padding-top: 90px;
    padding-bottom: 60px;
+}
+
+.list-group{
+   display: flex !important;
+   flex-direction: column !important;
+   align-items: center !important;
+   justify-content: center !important;
+   text-align: center !important;
 }
 
 #ttt{
@@ -764,22 +774,33 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 /* h. Contact Section
 /* ------------------------------------------------------------------ */
-#ctact{
-  margin-left: 12%;
-}
-
 #contact {
-   background: #191919;
+   display: flex !important;
+   flex-direction: column !important;
+   align-items: center !important;
+   justify-content: center !important;
+   text-align: center !important;
+   background-color: #100501 !important;
    padding-top: 96px;
    padding-bottom: 102px;
-   color: #636363;
+   color: white;
+   margin-top: 20px;
 }
+
+#ctact{
+   display: flex !important;
+   flex-direction: row !important;
+   align-items: center !important;
+   justify-content: center !important;
+}
+
+
 #contact .section-head { 
    margin-bottom: 42px; 
    margin-left: 10%;
  }
 
-#contact a, #contact a:visited  { color: #11ABB0; }
+#contact a, #contact a:visited  { color: #F06000; }
 #contact a:hover, #contact a:focus { color: #fff; }
 
 #contact h1 {
@@ -839,8 +860,8 @@ call-to-action .button {
 #contact input:focus,
 #contact textarea:focus,
 #contact select:focus {
-	color: #fff;
-	background-color: #11ABB0;
+	color: black;
+	background-color: white;
 }
 #contact button.submit {
 	text-transform: uppercase;
@@ -916,16 +937,20 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 
 footer {
+   display: flex !important;
+   align-items: center !important;
+   justify-content: center !important;
    padding-top: 48px;
-   margin-bottom: 48px;
-   color: #303030;
+   margin-bottom: 20px;
+   color: black;
+   background: #c96e23 !important;
    font-size: 14px;
    text-align: center;
    position: relative;
 }
 
-#foot{
-  margin-left: 12%;
+body{
+  background-color: #c96e23 !important;
 }
 
 footer a, footer a:visited { color: #525252; }
@@ -936,6 +961,7 @@ footer .copyright {
     margin: 0;
     padding: 0;
  }
+
 footer .copyright li {
     display: inline-block;
     margin: 0;
