--- a/css/default.css
+++ b/css/default.css
@@ -815,9 +815,15 @@ properly.
 }
 
 #iutlyc{
-   margin-top: 25%;
-   margin-left: 19%;
-   width: 80%;
+   margin-top: 20%;
+   width: 50%;
+}
+
+#aub{
+   margin-top: 20%;
+   margin-bottom: 5%;
+   width: 50%;
+   margin-left: 5% !important;
 }
 
 #festiv{
