Trying to fix php form

--- a/css/layout.css
+++ b/css/layout.css
@@ -26,7 +26,7 @@ body { background: #0f0f0f; }
 
 /* ------------------------------------------------------------------ */
 /* b. Header Styles
-/* ------------------------------------------------------------------ */
+/* ------------------------------------------------------------------ */ 
 
 header {
    position: relative;
@@ -928,6 +928,7 @@ call-to-action .button {
 }
 
 #submit{
+  margin-top: 2%; 
   margin-left: 50%;
 }
 
