--- a/css/layout.css
+++ b/css/layout.css
@@ -966,7 +966,7 @@ footer {
    padding-top: 48px;
    margin-bottom: 20px;
    color: black;
-   background: #c96e23 !important;
+   background: #E96906 !important;
    font-size: 14px;
    text-align: center;
    position: relative;
