--- a/css/layout.css
+++ b/css/layout.css
@@ -26,13 +26,6 @@
 /* b. Header Styles
 /* ------------------------------------------------------------------ */ 
 
-.scrollable{
-  overflow-y: scroll !important;
-}
-
-.notscrollable{
-  overflow: hidden;
-}
 
 header {
    position: relative;
@@ -44,7 +37,6 @@ header {
 	-webkit-background-size: cover !important;
    text-align: center;
    overflow: hidden;
-   margin-bottom: -10px;
 }
 
 /* vertically center banner section */
@@ -103,29 +95,33 @@ header .social {
 
 .fa-twitter{
   color: #00aced !important;
+  font-size: 30pt;
 }
 
 .fa-linkedin{
   color: #007bb6 !important;
+  font-size: 30pt;
 }
 
 .fa-instagram{
   color: #f2cd92 !important;
+  font-size: 30pt;
 }
 
 .fa-pinterest{
   color: #cb2027 !important;
+  font-size: 30pt;
 }
 
 .fa-github{
   color: white !important;
+  font-size: 30pt;
 }
 
 header .social li {
    display: inline-block;
    margin: 0 15px;
    padding: 0;
-   width: 50px;
 }
 
 header .social li a { 
@@ -225,10 +221,10 @@ ul#nav li.current a { color: #F06000; }
 
 #about {
    position: relative;
-   height: 1000px;
+   height: 100vh;
    min-height: 500px;
-   width: 100%;
-   background-image: url(../images/bg2.png);
+   width: 100vw;
+   background-color: #03040d;
    background-repeat: no-repeat;
    background-size: cover;
 }
@@ -252,8 +248,8 @@ ul#nav li.current a { color: #F06000; }
    overflow: hidden;
 }*/
 
-.bgtrain{
-  background-color: #ffe1ad;
+#comp{
+  width: 95%;
 }
 
 #resume{
@@ -263,7 +259,7 @@ ul#nav li.current a { color: #F06000; }
   justify-content: center;
   margin:0;
   padding:0;
-  background: url(../images/wp6.jpg) no-repeat center fixed; 
+  background-color: #03040d; 
   -webkit-background-size: cover; /* pour anciens Chrome et Safari */
   background-size: cover;
   margin-top: 10px;
@@ -285,7 +281,7 @@ ul#nav li.current a { color: #F06000; }
    font: 18px/24px 'opensans-bold', sans-serif;
    text-transform: uppercase;
    letter-spacing: 1px;
-   color: black;
+   color: white;
 }
 #resume h1 span {
    border-bottom: 3px solid #6E7881;
@@ -303,7 +299,7 @@ ul#nav li.current a { color: #F06000; }
    margin-bottom: 48px;
    padding-bottom: 24px;
    border-bottom: 1px solid #E8E8E8;
-   color: #eee0be;
+   color: white;
 }
 #resume .info {
    font: 16px/24px 'librebaskerville-italic', serif;
@@ -345,7 +341,7 @@ ul#nav li.current a { color: #F06000; }
 }
 .bars li em {
 	font: 15px 'opensans-bold', sans-serif;
-   color: black;
+   color: white;
 	text-transform: uppercase;
    letter-spacing: 2px;
 	font-weight: normal;
@@ -353,17 +349,20 @@ ul#nav li.current a { color: #F06000; }
 	margin-top: -15%;
 }
 .bar-expand {
-   position: absolute;
+
+   display: flex;
+   align-items: center;
+   justify-content: center;
    left: 0;
    top: 0;
    border: 2px solid black;
+   border-radius: 3px;
    margin: 0;
    padding-right: 24px;
   	background: #E96906;
    display: inline-block;
   	height: 42px;
    line-height: 42px;
-   border-radius: 3px 0 0 3px;
 }
 
 .langages {
@@ -456,8 +455,9 @@ ul#nav li.current a { color: #F06000; }
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 1000px;
-  background-image: url(../images/wp4.png);
+  height: 100vh;
+  width: 100vw;
+  background-color: #03040d;
   -webkit-background-size: cover !important;
   background-repeat: no-repeat;
   background-size: cover;
@@ -467,6 +467,7 @@ ul#nav li.current a { color: #F06000; }
 }
 
 .list-group{
+  margin-top: 3%;
    display: flex !important;
    flex-direction: column !important;
    align-items: center !important;
@@ -871,7 +872,7 @@ call-to-action .button {
    align-items: center !important;
    justify-content: center !important;
    text-align: center !important;
-   background-color: #100501 !important;
+   background-color: #03040d !important;
    padding-top: 96px;
    padding-bottom: 102px;
    color: white;
@@ -1029,10 +1030,7 @@ call-to-action .button {
    border: none;
 }
 
-#res{
-  color: red !important;
-  margin-left: 15%;
-}
+.fa .fa-
 
 
 /* ------------------------------------------------------------------ */
