--- a/css/layout.css
+++ b/css/layout.css
@@ -29,9 +29,9 @@
 
 header {
    position: relative;
-   height: 800px;
+   height: 100vh;
    min-height: 500px;
-   width: 100%;
+   width: 100vw;
    background: #161415 url(../images/wp2.jpg) no-repeat top center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
@@ -136,13 +136,9 @@ header .scrolldown a {
    bottom: 30px;
    left: 50%;
    margin-left: -29px;
-   color: #fff;
    display: block;
-   height: 42px;
-   width: 42px;
    font-size: 42px;
-   line-height: 42px;
-   color: #fff;
+   color: #525252;
    border-radius: 100%;
 
    -webkit-transition: all .3s ease-in-out;
@@ -263,6 +259,7 @@ ul#nav li.current a { color: #F06000; }
   -webkit-background-size: cover; /* pour anciens Chrome et Safari */
   background-size: cover;
   margin-top: 10px;
+  margin-right: -20px;
   padding-top: 70px;
   padding-bottom: 72px;
   padding-left: 20%;
@@ -284,7 +281,7 @@ ul#nav li.current a { color: #F06000; }
    color: white;
 }
 #resume h1 span {
-   border-bottom: 3px solid #6E7881;
+   border-bottom: 3px solid #E96906;
    padding-bottom: 6px;
 }
 #resume h3 {
@@ -464,6 +461,7 @@ ul#nav li.current a { color: #F06000; }
   margin-top: 10px;
   padding-top: 90px;
   padding-bottom: 60px;
+  margin-right: -30px !important;
 }
 
 .list-group{
@@ -877,6 +875,7 @@ call-to-action .button {
    padding-bottom: 102px;
    color: white;
    margin-top: 10px;
+   margin-right: -30px !important;
 }
 
 .pop{
@@ -1038,15 +1037,27 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 
 footer {
-   display: flex !important;
-   align-items: center !important;
-   justify-content: center !important;
-   padding-top: 48px;
-   color: black;
+   color: black !important;
    background: #373233 !important;
    font-size: 14px;
    text-align: center;
-   position: relative;
+   margin-right: -30px !important;
+}
+
+#foot{
+  color: black !important;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 70px;
+}
+
+.fl{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 footer a, footer a:visited { color: #525252; }
@@ -1095,12 +1106,25 @@ footer .social-links li:first-child { margin-left: 0; }
 
 /* Go To Top Button */
 #go-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 	position: absolute;
-	top: -24px;
-   left: 50%;
-   margin-left: -30px;
+  left: 50%;
+  margin-top: -50px;
 }
+
+.icon-up-open{
+  color: #E96906 !important;
+}
+
+
 #go-top a {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 	text-decoration: none;
 	border: 0 none;
 	display: block;
@@ -1114,10 +1138,9 @@ footer .social-links li:first-child { margin-left: 0; }
    -ms-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
 
-   color: #fff;
    font-size: 21px;
    line-height: 60px;
  	border-radius: 100%;
 }
-#go-top a:hover { background-color: #0F9095; }
+#go-top a:hover { background-color: #11ABB0; }
 
