--- a/NewWS/css/style.css
+++ b/NewWS/css/style.css
@@ -23,7 +23,7 @@ body {
       font-size: 16px; } }
 
 a {
-  color: #2c98f0;
+  color: #25292d;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
@@ -112,7 +112,6 @@ figure {
     font-size: 12px;
     text-transform: uppercase; }
   #colorlib-aside #colorlib-logo {
-    text-align: right;
     font-weight: 700;
     font-size: 22px;
     margin-bottom: .5em;
@@ -465,6 +464,10 @@ body.offcanvas {
 .fancy-collapse-panel .panel-default > .panel-heading {
   padding: 0; }
 
+.panel-heading{
+  box-shadow: 2px 3px 18px;
+}
+
 .panel-heading a {
   padding: 20px 25px;
   display: block;
@@ -537,8 +540,8 @@ body.offcanvas {
   content: '';
   position: absolute;
   display: block;
-  width: 4px;
-  background: #f2f3f7;
+  width: 1px;
+  background: #25292d;
   top: 20px;
   bottom: 20px;
   margin-left: 29px; }
@@ -558,6 +561,7 @@ body.offcanvas {
   display: block;
   width: 40px;
   height: 40px;
+  border: 1px solid #25292d;
   background: #2c98f0;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -588,6 +592,7 @@ body.offcanvas {
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label {
   position: relative;
   background: #f2f3f7;
+  box-shadow: 2px 3px 25px;
   padding: 1.5em;
   margin-left: 60px;
   -webkit-background-clip: padding-box;
@@ -940,6 +945,8 @@ body.offcanvas {
       color: #2c98f0; }
 
 .project {
+  cursor: zoom-in;
+  box-shadow: 2px 2px 20px;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -954,12 +961,17 @@ body.offcanvas {
     bottom: 0;
     left: 0;
     right: 0;
-    background: #2c98f0;
+    background-color: #2C9BD1;
     opacity: 0;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s; }
     .project .desc .con {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: #2C9BD1;
       padding: 20px;
       display: block;
       position: relative;
@@ -985,6 +997,7 @@ body.offcanvas {
           color: #333333; }
     .project .desc h3 {
       font-family: "Quicksand", Arial, sans-serif;
+      text-decoration: underline;
       font-size: 16px;
       font-weight: 500;
       text-transform: uppercase;
@@ -999,7 +1012,7 @@ body.offcanvas {
       transform: translate3d(0, -15px, 0);
       margin-bottom: 15px; }
       .project .desc h3 a {
-        color: #fff; }
+        color: #25292d; }
     .project .desc span {
       display: block;
       color: rgba(255, 255, 255, 0.7);
@@ -1442,3 +1455,11 @@ body.offcanvas {
 
 .js .animate-box {
   opacity: 0; }
+
+.tab-content{
+  margin-top: 50px;
+}
+
+.collapse:not(#navbar){
+  box-shadow: 0px 1px 3px;
+}
