Rework done - some bugs fixed

--- a/NewWS/css/bootstrap.css
+++ b/NewWS/css/bootstrap.css
@@ -888,8 +888,8 @@ pre code {
   }
 }
 @media (min-width: 1200px) {
-  .container {
-    width: 1170px;
+  .container:not(.nottoolarge) {
+    min-width: 1170px;
   }
 }
 
