resume download added

--- a/NewWS/css/style.css
+++ b/NewWS/css/style.css
@@ -1463,3 +1463,33 @@ body.offcanvas {
 .collapse:not(#navbar){
   box-shadow: 0px 1px 3px;
 }
+
+.download {
+  cursor: pointer;
+  height: 30px;
+  width: 30px;
+  overflow: visible;
+  margin-top: 25px;
+}
+.download:hover .arrow {
+  animation: bounce 1s both ease-out 1;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-3px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  75% {
+    transform: translateY(-3px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
