--- a/NewWS/css/style.css
+++ b/NewWS/css/style.css
@@ -411,7 +411,7 @@ body.offcanvas {
 
 .author-img {
   background-size: cover;
-  background-position: center center;
+  background-position: right right;
   background-repeat: no-repeat;
   position: relative; }
 
