--- a/NewWS/css/style.css
+++ b/NewWS/css/style.css
@@ -12,7 +12,6 @@
 *
 * ======================================================= */
 body {
-  background-color: #f8f7f2;
   font-family: "Quicksand", Arial, sans-serif;
   font-weight: 400;
   font-size: 15px;
@@ -1466,11 +1465,12 @@ body.offcanvas {
 
 .download {
   cursor: pointer;
-  height: 30px;
-  width: 30px;
+  height: 14px;
+  width: 14px;
   overflow: visible;
-  margin-top: 25px;
+  margin-left: 3px;
 }
+
 .download:hover .arrow {
   animation: bounce 1s both ease-out 1;
 }
@@ -1491,5 +1491,16 @@ body.offcanvas {
   100% {
     transform: translateY(0);
   }
+}
+
+.ul_networks{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.ul_networks li{
+  margin: 2px 2px 2px 2px;
 }
 
