--- a/css/animated_bg.css
+++ b/css/animated_bg.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600");
+
 .more-pens {
   position: fixed;
   left: 20px;
@@ -24,10 +25,14 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #edf3f8;
-  background: -moz-radial-gradient(center, ellipse cover, #edf3f8 1%, #25292d 100%);
+  background-image: url('../images/bgpc.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  background-attachment: fixed;
+  /*background: -moz-radial-gradient(center, ellipse cover, #edf3f8 1%, #25292d 100%);
   background: -webkit-radial-gradient(center, ellipse cover, #edf3f8 1%, #25292d 100%);
-  background: radial-gradient(ellipse at center, #edf3f8 1%, #25292d 100%);
+  background: radial-gradient(ellipse at center, #edf3f8 1%, #25292d 100%);*/
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#edf3f8', endColorstr='#dee3e8',GradientType=1 );
 }
 
