--- a/NewWS/css/bootstrap.css
+++ b/NewWS/css/bootstrap.css
@@ -2979,7 +2979,7 @@ tbody.collapse.in {
   list-style: none;
   font-size: 14px;
   text-align: left;
-  background-color: #fff;
+  background-color: #37474F;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -3485,7 +3485,7 @@ tbody.collapse.in {
 }
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
   color: #555555;
-  background-color: #fff;
+  background-color: #37474F;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
   cursor: default;
@@ -4053,7 +4053,7 @@ tbody.collapse.in {
   background-color: #333;
 }
 .navbar-inverse .navbar-toggle .icon-bar {
-  background-color: #fff;
+  background-color: #37474F;
 }
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
