--- a/NewWS/css/style.css
+++ b/NewWS/css/style.css
@@ -676,7 +676,7 @@ body.offcanvas {
   .services .icon {
     position: absolute;
     top: -20px;
-    left: 0;
+    left: 72px;
     right: 0;
     width: 100px;
     height: 50px;
