--- a/NewWS/css/style.css
+++ b/NewWS/css/style.css
@@ -78,9 +78,7 @@ figure {
   float: left;
   margin-left: -25px;
   width: 325px;
-  flex-direction: column;
-  justify-content: center;
-  display: flex;
+  display: block;
   position: fixed;
   z-index: 1001;
   background: #25292d;
