--- a/NewWS/sass/bootstrap/_navbar.scss
+++ b/NewWS/sass/bootstrap/_navbar.scss
@@ -196,7 +196,7 @@
   margin-right: $navbar-padding-horizontal;
   padding: 9px 10px;
   @include navbar-vertical-align(34px);
-  background-color: transparent;
+  // background-color: transparent;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid transparent;
   border-radius: $border-radius-base;
@@ -245,7 +245,7 @@
       float: none;
       width: auto;
       margin-top: 0;
-      background-color: transparent;
+      // background-color: transparent;
       border: 0;
       box-shadow: none;
       > li > a,
