--- a/css/animated_bg.css
+++ b/css/animated_bg.css
@@ -25,7 +25,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../images/bgpc.jpg');
+  background-image: url('../images/cityLondon.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
